# kaggul

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: static.yml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree  kaggul.doctree  modules.doctree  myka.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  kaggul.html  modules.html  myka.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  kaggul.rst.txt  modules.rst.txt  myka.rst.txt
kaggul/: __init__.py  kaggul.py  measure.py
myka/: __init__.py  kaggle_util.py  measure.py
