[build-system]
requires = ['setuptools>=61']
build-backend = 'setuptools.build_meta'

[project]
name = "kaggul"
version = "0.1"
readme = 'README.md'
requires-python = '>=3.9'
license = {file = 'LICENSE'}
authors = [{name = 'Kazuki Negita', email = 'welshonionman@gmail.com'}]
dependencies = [
    "kaggle"
]

[project.optional-dependencies]
dev = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx_fontawesome",
    "sphinx-autobuild",
    "myst_parser",
]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "B",    # flake8-bugbear
  "W",    # pycodestyle warnings
  "I",    # isort
  "UP",   # pyupgrade
  "A",    # flake8-builtins
  "N",    # flake8-broken-line
  "C90",  # flake8-complexity
  "C4",   # flake8-comprehensions
  "PIE",  # flake8-pie
  "SIM",  # flake8-simplify
  "LOG",  # flake8-logging
  "G",    # flake8-logging-format
  "RET",  # flake8-return
  "NPY",  # flake8-numpy
]
ignore = [
  "B007", # unused-loop-control-variable
  "I001", # unsorted-imports
  "N802", # function name should be lowercase
  "N806", # variable in function should be lowercase
  "N803", # argument name should be lowercase
  "RET504", # return statement should not be in a finally block
  "N812", # Lowercase {name} imported as non-lowercase {asname}
  "E501", # line too long
]

unfixable = [
  "F401",   # unused import
  "F841",   # unused variable
  "ERA001", # commented out code
]

[tool.ruff.lint.pydocstyle]
convention = "google"